--- a/style.css
+++ b/style.css
@@ -7923,6 +7923,9 @@ header.elementor-element {
 }
 
 #shop-cart-sidebar {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   position: fixed;
   top: 0;
   right: 0;
@@ -8001,6 +8004,10 @@ header.elementor-element {
 }
 
 .cart-sidebar-head {
+  -ms-flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  width: auto;
   border-bottom: 1px solid #ddd;
   padding: 30px 0;
   position: relative;
@@ -8056,17 +8063,17 @@ header.elementor-element {
 }
 
 .cart-sidebar-content {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0%;
+  -ms-flex-positive: 1;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden;
-  height: -webkit-calc( 100% - 210px);
-  height: calc( 100% - 210px);
-}
-
-@media (max-width: 599px) {
-  .cart-sidebar-content {
-    height: -webkit-calc( 100% - 160px);
-    height: calc( 100% - 160px);
-  }
 }
 
 .cart-sidebar-content.is-cart-empty.has-fst {
@@ -8081,69 +8088,15 @@ header.elementor-element {
   margin-top: 0;
 }
 
-.cart-sidebar-content.has-fst {
-  height: -webkit-calc( 100% - 248px);
-  height: calc( 100% - 248px);
+.cart-sidebar-content .woostify-mini-cart-custom-html {
+  -ms-flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  width: auto;
 }
 
-@media (max-width: 599px) {
-  .cart-sidebar-content.has-fst {
-    height: -webkit-calc( 100% - 198px);
-    height: calc( 100% - 198px);
-  }
-}
-
-.cart-sidebar-content.has-fst.has-fst-top {
-  margin-top: 48px;
-  height: -webkit-calc( 100% - 258px);
-  height: calc( 100% - 258px);
-}
-
-@media (max-width: 599px) {
-  .cart-sidebar-content.has-fst.has-fst-top {
-    height: -webkit-calc( 100% - 208px);
-    height: calc( 100% - 208px);
-  }
-}
-
-.cart-sidebar-content.has-fst.has-fst-top.has-fst-progress-bar {
-  margin-top: 65px;
-  height: -webkit-calc( 100% - 275px);
-  height: calc( 100% - 275px);
-}
-
-@media (max-width: 599px) {
-  .cart-sidebar-content.has-fst.has-fst-top.has-fst-progress-bar {
-    height: -webkit-calc( 100% - 225px);
-    height: calc( 100% - 225px);
-  }
-}
-
-.cart-sidebar-content.has-fst.has-fst-top .free-shipping-progress-bar {
-  position: absolute;
-  top: 80px;
-  left: 30px;
-  right: 30px;
-}
-
-@media (max-width: 599px) {
-  .cart-sidebar-content.has-fst.has-fst-top .free-shipping-progress-bar {
-    top: 60px;
-    left: 15px;
-    right: 15px;
-  }
-}
-
-.cart-sidebar-content.has-fst.has-fst-progress-bar {
-  height: -webkit-calc( 100% - 265px);
-  height: calc( 100% - 265px);
-}
-
-@media (max-width: 599px) {
-  .cart-sidebar-content.has-fst.has-fst-progress-bar {
-    height: -webkit-calc( 100% - 215px);
-    height: calc( 100% - 215px);
-  }
+.cart-sidebar-content .woostify-mini-cart-custom-html.pos-top {
+  margin: 10px 0;
 }
 
 .cart-sidebar-content .woocommerce-mini-cart__total {
@@ -8160,19 +8113,25 @@ header.elementor-element {
   }
 }
 
-.cart-sidebar-content .woocommerce-mini-cart__bottom {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-  left: 30px;
+.cart-sidebar-content .woocommerce-mini-cart {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0%;
+  -ms-flex-positive: 1;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  max-width: 100%;
+  overflow-y: auto;
 }
 
-@media (max-width: 599px) {
-  .cart-sidebar-content .woocommerce-mini-cart__bottom {
-    bottom: 15px;
-    right: 15px;
-    left: 15px;
-  }
+.cart-sidebar-content .woocommerce-mini-cart__bottom {
+  -ms-flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  width: auto;
+}
+
+.cart-sidebar-content .free-shipping-progress-bar.pos-top {
+  margin: 10px 0;
 }
 
 .cart-sidebar-content .woocommerce-mini-cart__buttons {
