--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1138,6 +1138,9 @@
 	&.has-distraction-free-checkout {
 		.site-content {
 			margin-top: 0;
+			@media (max-width: $screen-md - 1) {
+				margin: 0;
+			}
 		}
 
 		.site-header {
@@ -1147,9 +1150,15 @@
 			}
 			.woostify-container {
 				justify-content: flex-start;
+				@media (max-width: $screen-md - 1) {
+					justify-content: center;
+				}
 			}
 			.site-branding {
 				text-align: left;
+				@media (max-width: $screen-md - 1) {
+					text-align: center;
+				}
 			}
 		}
 	}
@@ -1177,6 +1186,10 @@
 				flex: 0 0 60%;
 				max-width: 60%;
 			}
+
+			@media (max-width: $screen-md - 1) {
+				padding-bottom: 15px;
+			}
 		}
 
 		.woostify-col {
@@ -1198,6 +1211,24 @@
 				@media (max-width: $screen-md - 1) {
 					position: static;
 					transform: none;
+					position: relative;
+					padding-bottom: 3.5em;
+					padding-top: 15px;
+				}
+
+				&:before {
+					display: none;
+					content: '';
+					position: absolute;
+					top: 0;
+					bottom: 0;
+					left: -50%;
+					width: 200vw;
+					background-color: rgba(0,0,0,0.02);
+					z-index: -1;
+					@media (max-width: $screen-md - 1) {
+						display: block;
+					}
 				}
 			}
 		}
@@ -1228,8 +1259,18 @@
 		}
 
 		.col-left {
-			max-width: 56.66666667%;
-			flex: 0 0 56.66666667%;
+			@media (min-width: $screen-md) {
+				max-width: 59.333333%;
+				flex: 0 0 59.333333%;
+			}
+			@media (min-width: 1400px) {
+				max-width: 58.66666667%;
+				flex: 0 0 58.66666667%;
+			}
+			@media (min-width: 1490px) {
+				max-width: 56.66666667%;
+				flex: 0 0 56.66666667%;
+			}
 		}
 		.woostify-col {
 			-ms-flex-preferred-size: 0;
@@ -1259,8 +1300,12 @@
 		float: none;
 		background: transparent;
 		width: 100%;
+		padding: 0;
 		@media (min-width: $screen-md) {
 			padding-left: 40px;
+		}
+		@media (max-width: $screen-md - 1) {
+			margin-top: 0;
 		}
 
 		.shop_table {
@@ -1371,9 +1416,6 @@
 			}
 		}
 	}
-	#payment {
-		padding-bottom: 30px;
-	}
 	.checkout-options {
 		.before-checkout {
 			&.ready {
@@ -1413,6 +1455,64 @@
 	}
 	[name="checkout"] {
 		margin-top: 0;
+	}
+	.woocommerce-billing-fields > h3 {
+		display: inline-block;
+	}
+	#checkout-spacer {
+		display: none;
+		@media (min-width: $screen-md) {
+			display: block;
+		}
+	}
+	#order_review_heading {
+		font-size: 24px;
+		font-weight: normal;
+		margin-top: 0;
+		@media (max-width: $screen-md - 1) {
+			display: inline-block;
+		}
+	}
+	.woocommerce-billing-fields h3, #order_review_heading {
+		position: relative;
+		&:before {
+			position: absolute;
+			top: 50%;
+			left: 100%;
+			margin-left: 20px;
+			display: block;
+			content: " ";
+			width: 37px;
+			height: 1px;
+			background: currentColor;
+			background: rgba(0,0,0,0.2);
+		}
+	}
+	.woocommerce-billing-fields {
+		position: relative;
+	}
+	.back-to-cart {
+		z-index: 7;
+		position: absolute;
+		right: 0;
+		top: 1.6em;
+
+		a {
+			display: flex;
+			align-items: center;
+			padding: 5px 0;
+			.woostify-svg-icon {
+				margin-top: -2px;
+				margin-right: 4px;
+				svg {
+					width: 10px;
+					height: 10px;
+				}
+			}
+			span {
+				line-height: 1;
+			}
+		}
 	}
 }
 
