--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1365,9 +1365,24 @@
 				}
 			}
 			.woocommerce-shipping-methods {
-				li label {
+				li {
 					display: flex;
-					justify-content: space-between;
+					justify-content: flex-start;
+					&:not(:last-child) {
+						margin-bottom: 5px;
+					}
+					input {
+						margin: 4px 5px 0 0;
+					}
+					label {
+						display: flex;
+						justify-content: space-between;
+						-moz-box-flex: 1;
+						-webkit-flex: 1;
+						-moz-flex: 1;
+						-ms-flex: 1;
+						flex: 1;
+					}
 				}
 			}
 		}
