--- a/style.css
+++ b/style.css
@@ -9917,11 +9917,18 @@ header.elementor-element {
 
 .checkout-layout-3 #order_review .shop_table .cart_item .product-name {
   position: relative;
+  padding-left: 75px;
+  position: relative;
+  min-height: 80px;
 }
 
 .checkout-layout-3 #order_review .shop_table .cart_item .product-name .w-product-thumb {
   width: 60px;
   overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .checkout-layout-3 #order_review .shop_table .cart_item .product-name .w-product-thumb img {
@@ -9946,6 +9953,12 @@ header.elementor-element {
   right: 100%;
   z-index: 3;
   display: inline-flex;
+}
+
+.checkout-layout-3 #order_review .shop_table .cart_item .product-name .variation {
+  display: block;
+  width: 100%;
+  font-size: 13px;
 }
 
 .checkout-layout-3 #order_review .woocommerce-checkout-review-order-table tbody tr {
