Change product name font weight

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1319,6 +1319,7 @@
 					padding-left: 75px;
 					position: relative;
 					min-height: 80px;
+					font-weight: 500;
 
 					.w-product-thumb {
 						width: 60px;
