--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -1314,12 +1314,15 @@
 				text-transform: uppercase;
 			}
 			.cart_item {
+				min-height: 60px;
+				margin-bottom: 15px;
 				.product-name {
 					position: relative;
 					padding-left: 75px;
 					position: relative;
-					min-height: 80px;
 					font-weight: 500;
+					padding-top: 0;
+					padding-bottom: 0;
 
 					.w-product-thumb {
 						width: 60px;
