--- a/style.css
+++ b/style.css
@@ -8804,8 +8804,22 @@ header.elementor-element {
   display: block;
 }
 
-.product-images .tns-nav {
-  z-index: 0;
+.product-images .swiper-nav-btn {
+  background: #fff;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-images .swiper-nav-btn .woostify-svg-icon {
+  display: inline-flex;
 }
 
 .has-product-thumbnails.horizontal-style .product-images {
@@ -8828,7 +8842,7 @@ header.elementor-element {
   border: 1px solid rgba(0, 0, 0, 0);
 }
 
-.product-thumbnail-images .tns-nav-active img {
+.product-thumbnail-images .swiper-slide-thumb-active img {
   border: 1px solid #555;
 }
 
