Update slider for Grid and Column layout on mobile

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -122,6 +122,15 @@
 
 	@media (min-width: $screen-md) {
 		width: calc((100% - 30px) / 2);
+
+		&.column-style, &.grid-style {
+			.swiper-wrapper {
+				flex-wrap: wrap;
+			}
+			.swiper-nav-btn {
+				display: none;
+			}
+		}
 	}
 
 	&.wc-default-gallery {
