Update vertical slider

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -174,28 +174,28 @@
 	&.vertical-style.has-product-thumbnails {
 		@media (min-width: $screen-sm) {
 			position: relative;
-			padding-left: 70px;
+			display: flex;
 
 			.product-images {
 				order: 2;
+				flex: 0 1 100%;
 			}
 
 			.product-thumbnail-images {
 				width: 50px;
 				min-width: 50px;
 				margin-right: 20px;
-				position: absolute;
-				left: 0;
-				top: 0;
+				height: 100%;
 			}
 
 			#product-thumbnail-images {
-				width: 300px;
-				transform: rotate(90deg) translate(0, -100%);
-				transform-origin: left top;
+				max-height: 500px;
+				overflow: hidden;
 				.thumbnail-item {
-					transform: rotate(-90deg);
-					max-width: 50px;
+					margin-bottom: 10px;
+					&:last-child {
+						margin-bottom: 0;
+					}
 				}
 			}
 		}
