--- a/style.css
+++ b/style.css
@@ -8700,27 +8700,27 @@ header.elementor-element {
 @media (min-width: 768px) {
   .product-gallery.vertical-style.has-product-thumbnails {
     position: relative;
-    padding-left: 70px;
+    display: flex;
   }
   .product-gallery.vertical-style.has-product-thumbnails .product-images {
     order: 2;
+    flex: 0 1 100%;
   }
   .product-gallery.vertical-style.has-product-thumbnails .product-thumbnail-images {
     width: 50px;
     min-width: 50px;
     margin-right: 20px;
-    position: absolute;
-    left: 0;
-    top: 0;
+    height: 100%;
   }
   .product-gallery.vertical-style.has-product-thumbnails #product-thumbnail-images {
-    width: 300px;
-    transform: rotate(90deg) translate(0, -100%);
-    transform-origin: left top;
+    max-height: 500px;
+    overflow: hidden;
   }
   .product-gallery.vertical-style.has-product-thumbnails #product-thumbnail-images .thumbnail-item {
-    transform: rotate(-90deg);
-    max-width: 50px;
+    margin-bottom: 10px;
+  }
+  .product-gallery.vertical-style.has-product-thumbnails #product-thumbnail-images .thumbnail-item:last-child {
+    margin-bottom: 0;
   }
 }
 
